--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello world
+---
+layout: default
+title: first thing
+---
+<div class="blurb">
+	<h1>hello world</h1>
+	<p>This is a test lets see how it goes</p>
+</div><!-- /.blurb -->
+
